--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,62 @@
         android:layout_height="match_parent"
         android:focusable="false"
         android:focusableInTouchMode="false"/>
-    <ImageView
-        android:layout_width="225dp"
-        android:layout_height="200dp"
-        android:id="@+id/imageLogo"
-        android:src="@drawable/logo"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="225dp"
+            android:layout_height="200dp"
+            android:id="@+id/imageLogo"
+            android:src="@drawable/logo"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/transparent"
+                android:text="Bejelentkezés"
+                android:id="@+id/logInButton"
+                android:fontFamily="@font/arial"
+                android:textSize="12dp"
+                android:textColor="@color/black"
+                android:layout_marginTop="10dp"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/transparent"
+                android:text="Regisztráció"
+                android:id="@+id/registerButton"
+                android:fontFamily="@font/arial"
+                android:textSize="12dp"
+                android:textColor="@color/black"
+                android:layout_marginTop="10dp"/>
+
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/transparent"
+                android:text="Keresés"
+                android:id="@+id/searchButton"
+                android:fontFamily="@font/arial"
+                android:textSize="12dp"
+                android:textColor="@color/black"
+                android:layout_marginTop="10dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Click"
+                android:id="@+id/test"/>
+        </LinearLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
