--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,17 +26,17 @@
             android:layout_marginTop="20dp"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/transparent"
+                android:background="@color/dark"
                 android:text="Bejelentkezés"
                 android:id="@+id/logInButton"
                 android:fontFamily="@font/arial"
                 android:textSize="12dp"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:layout_marginTop="10dp"/>
             <Button
                 android:layout_width="wrap_content"
@@ -60,13 +60,28 @@
                 android:textSize="12dp"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Click"
-                android:id="@+id/test"/>
-        </LinearLayout>
 
+        </LinearLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Email:"
+        android:id="@+id/editTextFirst"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Password:"
+            android:id="@+id/editTextSecond"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:id="@+id/editTextThird"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:id="@+id/editTextFourth"/>
     </LinearLayout>
 
 </FrameLayout>
