home activity basic layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
     <color name="dark">#FF301934</color>
+    <color name="lightGrey">#ADADAD</color>
+
 </resources>
